--- a/Gamification.html
+++ b/Gamification.html
@@ -163,7 +163,7 @@
 
                     <!-- Liên kết các mục của footer -->
                     <div class="footer-col">
-                        <div class="footer-title">STUDY4</div>
+                        <div class="footer-title">LearnEnglish</div>
                         <ul class="footer-links">
                             <li><a href="/about/">Về chúng tôi</a></li>
                             <li><a href="/contact/">Liên hệ</a></li>
