--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learn English</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <!-- <link rel="stylesheet" href="css/styles.css"> -->
     <link rel="stylesheet" href="css/blog.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/footer.css">
@@ -35,9 +35,6 @@
     </header>
 
     <div class="content-wrapper">
-        <link rel="stylesheet" href="blog.css">
-
-
 
         <div class="container">
             <div class="row">
@@ -631,7 +628,7 @@
                     <div class="footer-col">
                         <a href="index.html"
                             style="text-decoration: none; color: inherit; display: flex; align-items: center;">
-                            <img src="assets/img/logoWeb.png" height="65" style="margin-right: 5px;">
+                            <img src="assets/img/logoWeb.png" height="65" style="margin-right: 5px; width: 50px;">
                             <!-- Thêm margin-right để tạo khoảng cách giữa logo và chữ -->
                             <span><b>LearnEnglish</b></span>
                         </a>
@@ -639,15 +636,15 @@
                         <div class="site-socials">
                             <!-- Facebook -->
                             <a target='_blank' href='https://facebook.com'>
-                                <img class='social-link' src='/assets/img/fb_logo.jpg' height="50">
+                                <img class='social-link' src='assets/img/fb_logo.jpg' height="50">
                             </a>
                             <!-- Instagram -->
                             <a target='_blank' href='https://instagram.com'>
-                                <img class='social-link' src='/assets/img/ins_logo.jpg' height="50" >
+                                <img class='social-link' src='assets/img/ins_logo.jpg' height="50" >
                             </a>
                             <!-- Tiktok -->
                             <a target='_blank' href='https://www.tiktok.com'>
-                                <img class='social-link' src='/assets/img/tik_logo.jpg' height="50">
+                                <img class='social-link' src='assets/img/tik_logo.jpg' height="50">
                             </a>
                         </div>
                     </div>
