--- a/course.html
+++ b/course.html
@@ -1,231 +1,224 @@
 <!DOCTYPE html>
 <html lang="vi">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Learn English</title>
-    <link rel="stylesheet" href="css/course.css" />
-    <link rel="stylesheet" href="css/footer.css" />
-    <link rel="stylesheet" href="css/header.css" />
-  </head>
 
-  <body>
-    <header>
-      <link rel="stylesheet" href="css/header.css">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Learn English</title>
+  <link rel="stylesheet" href="css/course.css" />
+  <link rel="stylesheet" href="css/footer.css" />
+  <link rel="stylesheet" href="css/header.css" />
+</head>
 
-      <div class="logoweb">
-          <a href="index.html" style="text-decoration: none; color: inherit; display: flex; align-items: center;">
-              <img src="assets/img/logoWeb.png" alt="LearnEnglish" style="margin-right: 5px;">
-              <!-- Thêm margin-right để tạo khoảng cách giữa logo và chữ -->
-              <span><b>LearnEnglish</b></span>
-          </a>
-      </div>
-      <nav>
-          <ul>
-              <li><a href="course.html" class="active"  >Course</a></li>
-              <li><a href="flashcards.html" >Flashcards</a></li>
-              <li><a href="blog.html" >Blog</a></li>
-              <li><a href="progressTracking.html">ProgressTracking</a></li>
-              <li><a href="Gamification.html">Gamification</a></li>
-              <li><a href="signIn.html" class="signIn">Sign In</a></li>
-          </ul>
-      </nav>
+<body>
+  <header>
+    <link rel="stylesheet" href="css/header.css">
+
+    <div class="logoweb">
+      <a href="index.html" style="text-decoration: none; color: inherit; display: flex; align-items: center;">
+        <img src="assets/img/logoWeb.png" alt="LearnEnglish" style="margin-right: 5px;">
+        <!-- Thêm margin-right để tạo khoảng cách giữa logo và chữ -->
+        <span><b>LearnEnglish</b></span>
+      </a>
+    </div>
+    <nav>
+      <ul>
+        <li><a href="course.html" class="active">Course</a></li>
+        <li><a href="flashcards.html">Flashcards</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="progressTracking.html">ProgressTracking</a></li>
+        <li><a href="Gamification.html">Gamification</a></li>
+        <li><a href="signIn.html" class="signIn">Sign In</a></li>
+      </ul>
+    </nav>
   </header>
-  
-    <!-- Main Course Section -->
-    <section class="course-section container mx-auto">
-      <h2 class="course-title1">Course</h2>
 
-      <!-- Search Bar -->
-      <div class="search-bar">
-        <input
-          type="text"
-          id="searchInput"
-          oninput="searchCourses()"
-          placeholder="Tìm kiếm khóa học..."
-        />
-      </div>
 
-      <!-- Course 1 -->
-      <div class="course-card course">
-        <img src="assets/img/course_1.png" alt="Course Logo" />
-        <div class="course-info">
-          <h3 class="course-title">
-            Combo 4 kỹ năng IELTS Intensive [Tặng TED Talks]
-          </h3>
-          <div class="course-meta">
-            <span>4.9 </span>
-            <span>(630 Đánh giá)</span>
-            <span>98,671 Học viên</span>
-          </div>
-          <ul>
-            <li>✅ Dành cho các bạn từ band 4.0 trở lên</li>
-            <li>✅ Sở hữu trọn bộ 4 khóa học IELTS Intensive online</li>
-            <li>
-              ✅ Tặng kèm khóa Luyện nghe nói tiếng Anh cùng TED Talks trị giá
-              599k
-            </li>
-          </ul>
-        </div>
-      </div>
 
-      <!-- Course 2 -->
-      <div class="course-card course">
-        <img src="assets/img/course_2.png" alt="Course Logo" />
-        <div class="course-info">
-          <h3 class="course-title">
-            Combo Advanced IELTS Intensive kèm chấm chữa giáo viên bản ngữ [Tặng
-            khóa TED Talks]
-          </h3>
-          <div class="course-meta">
-            <span>4.9 </span>
-            <span>(680 Đánh giá)</span>
-            <span>107,333 Học viên</span>
-          </div>
-          <ul>
-            <li>✅ Dành cho các bạn từ band 4.0 trở lên, target 7.0+</li>
-            <li>✅ Sở hữu trọn bộ 4 khóa học IELTS Intensive online</li>
-            <li>
-              ✅ 500 bài học và hơn 2000 bài thực hành từ vựng, ngữ pháp
-              mini-game
-            </li>
-          </ul>
-        </div>
-      </div>
 
-      <!-- Course 3 -->
-      <div class="course-card course">
-        <img src="assets/img/course_3.png" alt="Course Logo" />
-        <div class="course-info">
-          <h3 class="course-title">
-            Combo lộ trình IELTS từ 0-7+ kèm chấm chữa giáo viên bản ngữ [Tặng
-            TED Talks]
-          </h3>
-          <div class="course-meta">
-            <span>4.9 </span>
-            <span>(891 Đánh giá)</span>
-            <span>123,668 Học viên</span>
-          </div>
-          <ul>
-            <li>✅ Dành cho các bạn từ mất gốc, target band 7+</li>
-            <li>✅ Sở hữu trọn bộ 5 khóa học IELTS</li>
-          </ul>
-        </div>
-      </div>
-    </section>
-    <div class="footer-wrapper">
-      <link rel="stylesheet" href="css/footer.css" />
-      <div class="footer-container">
-        <footer>
-          <div class="footer-row">
-            <!-- Logo và các mạng xã hội -->
-            <div class="footer-col">
-              <a
-                href="index.html"
-                style="
+  <!-- Main Course Section -->
+  <section class="course-section container mx-auto">
+    <h2 class="course-title1">Course</h2>
+
+    <!-- Search Bar -->
+    <div class="search-bar">
+      <input type="text" id="searchInput" oninput="searchCourses()" placeholder="Tìm kiếm khóa học..." />
+    </div>
+
+    <!-- Course 1 -->
+<a class="course-card course" href="practical1-english-ted.html">
+  <img src="assets/img/practical1.webp" alt="Course Logo" />
+  <div class="course-info">
+    <h3 class="course-title">
+      Luyện nghe nói tiếng Anh cùng TED Talks
+    </h3>
+    <div class="course-meta">
+      <span>5.0 </span>
+      <span>(5 Đánh giá)</span>
+      <span>36,933 Học viên</span>
+    </div>
+    <ul style="list-style-type: disc;">
+      <li>Luyện kỹ năng nghe và đọc hiểu thông qua việc xem và chép chính tả với các video của TED và TED Talks.</li>
+      <li>Luyện kỹ năng nói thông qua phương pháp shadowing có chấm lỗi phát âm tự động.</li>
+      <li>Hơn 200 video thuộc nhiều lĩnh vực như khoa học, giáo dục, kinh tế, văn học… sẽ giúp bạn không những trau dồi tiếng Anh mà còn học được rất nhiều kiến thức bổ ích trong cuộc sống.</li>
+    </ul>
+  </div>
+</a>
+
+    <!-- Course 2 -->
+<a class="course-card course" href="practical2-english-3600.html">
+  <img src="assets/img/practical2.webp" alt="Course Logo" />
+  <div class="course-info">
+    <h3 class="course-title">3600 từ vựng tiếng Anh thông dụng</h3>
+    <div class="course-meta">
+      <span>4.8 </span>
+      <span>(60 Đánh giá)</span>
+      <span>1,023 Học viên</span>
+    </div>
+    <ul style="list-style-type: disc;">
+      <li>Kho từ vựng siêu khủng với hơn 3600 từ vựng thông dụng trong 99% ngữ cảnh</li>
+      <li>Các bài học sắp xếp theo 100 chủ đề logic, khoa học</li>
+      <li>Học bằng flash card với hình ảnh sinh động, 20.000 câu hỏi luyện tập dưới dạng các trò chơi lý thú đảm bảo việc học hiệu quả và không nhàm chán</li>
+    </ul>
+  </div>
+</a>
+
+<!-- Course 3 -->
+<a class="course-card course" href="practical3-english-ngu-phap.html">
+  <img src="assets/img/practical3.webp" alt="Course Logo" />
+  <div class="course-info">
+    <h3 class="course-title">Ngữ pháp tiếng Anh từ A-Z</h3>
+    <div class="course-meta">
+      <span>4.8 </span>
+      <span>(65 Đánh giá)</span>
+      <span>985 Học viên</span>
+    </div>
+    <ul style="list-style-type: disc;">
+      <li>Nằm lòng gần 100 chủ điểm ngữ pháp sắp xếp từ cơ bản đến nâng cao</li>
+      <li>Hơn 10.000 câu hỏi luyện tập dưới dạng các trò chơi lý thú đảm bảo việc học hiệu quả và không nhàm chán</li>
+    </ul>
+  </div>
+</a>
+
+<!-- Course 4 -->
+<a class="course-card course" href="practical4-english-phat-am.html">
+  <img src="assets/img/practical4.webp" alt="Course Logo" />
+  <div class="course-info">
+    <h3 class="course-title">Học phát âm và thực hành giao tiếp tiếng Anh</h3>
+    <div class="course-meta">
+      <span>4.8 </span>
+      <span>(127 Đánh giá)</span>
+      <span>2,593 Học viên</span>
+    </div>
+    <ul style="list-style-type: disc;">
+      <li>Thành thạo 44 âm cơ bản tạo nên mọi từ vựng trong tiếng Anh. Luyện tập khẩu hình miệng và phát âm với 1000 từ vựng</li>
+      <li>Trau dồi kĩ năng nói với hàng trăm cách diễn đạt thuộc hơn 50 tình huống</li>
+      <li>Tự tin giao tiếp với 100 chủ đề phổ biến nhất trong tiếng Anh</li>
+    </ul>
+  </div>
+</a>
+
+<!-- Course 5 -->
+<a class="course-card course" href="practical5-english-music.html">
+  <img src="assets/img/practical5.webp" alt="Course Logo" />
+  <div class="course-info">
+    <h3 class="course-title">Học tiếng Anh qua bài hát</h3>
+    <div class="course-meta">
+      <span>5.0 </span>
+      <span>(7 Đánh giá)</span>
+      <span>229 Học viên</span>
+    </div>
+    <ul style="list-style-type: disc;">
+      <li>Luyện kỹ năng nghe và đọc hiểu thông qua việc xem và chép chính tả với các bài hát nổi tiếng nhất thế giới</li>
+      <li>Hơn 1000 video ca nhạc với nhiều chủ đề khác nhau, chia thành 3 độ khó từ vựng: cơ bản, trung bình và nâng cao giúp bạn bắt đầu học ở bất kỳ trình độ nào</li>
+    </ul>
+  </div>
+</a>
+
+  </section>
+
+
+
+
+  <div class="footer-wrapper">
+    <link rel="stylesheet" href="css/footer.css" />
+    <div class="footer-container">
+      <footer>
+        <div class="footer-row">
+          <!-- Logo và các mạng xã hội -->
+          <div class="footer-col">
+            <a href="index.html" style="
                   text-decoration: none;
                   color: inherit;
                   display: flex;
                   align-items: center;
-                "
-              >
-                <img
-                  src="assets/img/logoWeb.png"
-                  height="65"
-                  style="margin-right: 5px"
-                />
-                <!-- Thêm margin-right để tạo khoảng cách giữa logo và chữ -->
-                <span><b>LearnEnglish</b></span>
+                ">
+              <img src="assets/img/logoWeb.png" height="65" style="margin-right: 5px" />
+              <!-- Thêm margin-right để tạo khoảng cách giữa logo và chữ -->
+              <span><b>LearnEnglish</b></span>
+            </a>
+
+            <div class="site-socials">
+              <!-- Facebook -->
+              <a target="_blank" href="https://facebook.com">
+                <img class="social-link" src="assets/img/fb_logo.jpg" height="50" />
               </a>
-
-              <div class="site-socials">
-                <!-- Facebook -->
-                <a target="_blank" href="https://facebook.com">
-                  <img
-                    class="social-link"
-                    src="assets/img/fb_logo.jpg"
-                    height="50"
-                  />
-                </a>
-                <!-- Instagram -->
-                <a target="_blank" href="https://instagram.com">
-                  <img
-                    class="social-link"
-                    src="assets/img/ins_logo.jpg"
-                    height="50"
-                  />
-                </a>
-                <!-- Tiktok -->
-                <a target="_blank" href="https://www.tiktok.com">
-                  <img
-                    class="social-link"
-                    src="assets/img/tik_logo.jpg"
-                    height="50"
-                  />
-                </a>
-              </div>
-            </div>
-
-            <!-- Liên kết các mục của footer -->
-            <div class="footer-col">
-              <div class="footer-title">STUDY4</div>
-              <ul class="footer-links">
-                <li><a href="/about/">Về chúng tôi</a></li>
-                <li><a href="/contact/">Liên hệ</a></li>
-              </ul>
-            </div>
-
-            <div class="footer-col">
-              <div class="footer-title">Tài nguyên</div>
-              <ul class="footer-links">
-                <li><a href="/tests/">Thư viện đề thi</a></li>
-                <li><a href="/posts/">Blog</a></li>
-                <li><a href="/materials/">Kho tài liệu</a></li>
-                <li><a href="/groups/">Nhóm học tập</a></li>
-              </ul>
-            </div>
-
-            <div class="footer-col">
-              <div class="footer-title">Chính sách chung</div>
-              <ul class="footer-links">
-                <li><a href="/user-guide/">Hướng dẫn sử dụng</a></li>
-                <li><a href="/buying-guide/">Hướng dẫn thanh toán</a></li>
-                <li><a href="/privacy/">Điều khoản bảo mật</a></li>
-                <li><a href="/terms/">Điều khoản sử dụng</a></li>
-                <li>
-                  <a href="/buying-terms/">Điều khoản và Điều Kiện Giao Dịch</a>
-                </li>
-                <li><a href="/checkout-policy">Chính sách kiểm hàng</a></li>
-                <li>
-                  <a href="/delivery-policy">Chính sách giao, nhận hàng</a>
-                </li>
-                <li><a href="/feedback/">Phản hồi, khiếu nại</a></li>
-                <li>
-                  <a href="/return-policy">Chính sách chuyển đổi, hoàn hủy</a>
-                </li>
-              </ul>
+              <!-- Instagram -->
+              <a target="_blank" href="https://instagram.com">
+                <img class="social-link" src="assets/img/ins_logo.jpg" height="50" />
+              </a>
+              <!-- Tiktok -->
+              <a target="_blank" href="https://www.tiktok.com">
+                <img class="social-link" src="assets/img/tik_logo.jpg" height="50" />
+              </a>
             </div>
           </div>
-        </footer>
-      </div>
+
+          <!-- Liên kết các mục của footer -->
+          <div class="footer-col">
+            <div class="footer-title">LearnEnglish</div>
+            <ul class="footer-links">
+              <li><a href="/about/">Về chúng tôi</a></li>
+              <li><a href="/contact/">Liên hệ</a></li>
+            </ul>
+          </div>
+
+          <div class="footer-col">
+            <div class="footer-title">Tài nguyên</div>
+            <ul class="footer-links">
+              <li><a href="/tests/">Thư viện đề thi</a></li>
+              <li><a href="/posts/">Blog</a></li>
+              <li><a href="/materials/">Kho tài liệu</a></li>
+              <li><a href="/groups/">Nhóm học tập</a></li>
+            </ul>
+          </div>
+
+          <div class="footer-col">
+            <div class="footer-title">Chính sách chung</div>
+            <ul class="footer-links">
+              <li><a href="/user-guide/">Hướng dẫn sử dụng</a></li>
+              <li><a href="/buying-guide/">Hướng dẫn thanh toán</a></li>
+              <li><a href="/privacy/">Điều khoản bảo mật</a></li>
+              <li><a href="/terms/">Điều khoản sử dụng</a></li>
+              <li>
+                <a href="/buying-terms/">Điều khoản và Điều Kiện Giao Dịch</a>
+              </li>
+              <li><a href="/checkout-policy">Chính sách kiểm hàng</a></li>
+              <li>
+                <a href="/delivery-policy">Chính sách giao, nhận hàng</a>
+              </li>
+              <li><a href="/feedback/">Phản hồi, khiếu nại</a></li>
+              <li>
+                <a href="/return-policy">Chính sách chuyển đổi, hoàn hủy</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </footer>
     </div>
-  </body>
-  <script>
-    // JavaScript function to filter courses based on search input
-    function searchCourses() {
-        const searchTerm = document.getElementById('searchInput').value.toLowerCase();
-        const courses = document.querySelectorAll('.course');
-
-        courses.forEach(course => {
-            const title = course.querySelector('.course-title').textContent.toLowerCase();
-            if (title.includes(searchTerm)) {
-                course.style.display = '';
-            } else {
-                course.style.display = 'none';
-            }
-        });
-    }
-
-    
+  </div>
+</body>
+<script>
 </script>
+
 </html>
