--- a/general-english/general-english.html
+++ b/general-english/general-english.html
@@ -145,7 +145,7 @@
   <div class="layout__region layout__region--content">
     
     <div class="field field--name-field-image field--type-image field--label-hidden field--items">
-            <div class="field--item">  <a href="/general-english/video-zone/video-zone/video-zone.html" target="_top">  <img loading="eager" srcset="
+            <div class="field--item">  <a href="/general-english/video-zone/" target="_top">  <img loading="eager" srcset="
 https://learnenglish.britishcouncil.org/sites/podcasts/files/styles/430x261_4/public/2021-11/RS8898_GettyImages-1145041232-hig.jpg?itok=nW2PujDk 430w" sizes="100vw" width="430" height="261" src="
 https://learnenglish.britishcouncil.org/sites/podcasts/files/styles/430x261_4/public/2021-11/RS8898_GettyImages-1145041232-hig.jpg?itok=nW2PujDk" alt="Video zone" class="img-responsive">
 
@@ -156,7 +156,7 @@ https://learnenglish.britishcouncil.org/sites/podcasts/files/styles/430x261_4/pu
 <div class="content-wrapper">
   
           <div class="field field--name-taxonomy-term-title field--type-ds field--label-hidden field--item"><h2>
-<a href="/general-english/video-zone/video-zone/video-zone.html" hreflang="en" target="_top">Video zone</a>
+<a href="/general-english/video-zone/" target="_top">Video zone</a>
 </h2>
 </div>
     
