--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Learn English</title>
     <link
       rel="icon"
-      href="assets/img/Avatar_LearnEnglish.svg"
+      href="./assets/img/Avatar_LearnEnglish.svg"
       type="image/svg+xml"
     />
     <link rel="stylesheet" href="css/styles.css" />
@@ -90,7 +90,7 @@
             <a class="topnav-brand" href="/">
               <img
                 class="topnav-logo"
-                src="/assets/img/Logo_LearnEnglish.svg"
+                src="./assets/img/Logo_LearnEnglish.svg"
                 alt="STUDY4"
               />
             </a>
@@ -110,30 +110,30 @@
           >
             <ul class="nav">
               <li class="nav-item">
-                <a class="nav-link" href="/courses" bis_skin_checked="1"
+                <a class="nav-link" href="./courses/" bis_skin_checked="1"
                   >Course</a
                 >
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="/skills/" bis_skin_checked="1"
+                <a class="nav-link" href="./skills/" bis_skin_checked="1"
                   >Skill</a
                 >
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="/flashcards/me/" bis_skin_checked="1"
+                <a class="nav-link" href="./flashcards/me/" bis_skin_checked="1"
                   >Flashcards</a
                 >
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="/blog" bis_skin_checked="1">Blog</a>
+                <a class="nav-link" href="./blog" bis_skin_checked="1">Blog</a>
               </li>
               <li class="nav-item">
                 <a
                   class="nav-link"
-                  href="/general-english/"
+                  href="./general-english/"
                   bis_skin_checked="1"
                   >General english</a
                 >
@@ -142,7 +142,7 @@
               <li class="nav-item">
                 <a
                   class="nav-link"
-                  href="/courses/activate/"
+                  href="./courses/activate/"
                   bis_skin_checked="1"
                 >
                   Kích hoạt tài khoản
