--- a/general-english/audio-zone/audio-zone.html
+++ b/general-english/audio-zone/audio-zone.html
@@ -71,7 +71,38 @@
 </div>
 
 </section>
+<section class="views-element-container view-taxonomy-term block block-views block-views-blocksection-blocks-block-head clearfix" id="block-views-block-section-blocks-block-head">
+  
+    
 
+  <div class="form-group" bis_skin_checked="1"><div class="view-header view view-section-blocks view-id-section_blocks view-display-id-block_head js-view-dom-id-e692eaf41f4ff6b77c1caa3d9385fdd25e9d1f3b8b7787cc48bd774670699e71" bis_skin_checked="1">
+
+
+  
+  <div class="view-content" bis_skin_checked="1">
+      <div class="views-row" bis_skin_checked="1"><div class="taxonomy-term taxonomy-term--type-section taxonomy-term--view-mode-head ds-1col clearfix" bis_skin_checked="1">
+
+
+
+
+  <div class="field field--name-field-image field--type-image field--label-hidden field--items" bis_skin_checked="1">
+          <div class="field--item" bis_skin_checked="1">    <img loading="eager" srcset="https://learnenglish.britishcouncil.org/sites/podcasts/files/styles/max_325x325/public/2021-10/RS5790_101887935-hig.jpg?itok=bDtYzTcr 325w, https://learnenglish.britishcouncil.org/sites/podcasts/files/styles/max_650x650/public/2021-10/RS5790_101887935-hig.jpg?itok=c2O-xgBU 650w, https://learnenglish.britishcouncil.org/sites/podcasts/files/styles/max_1300x1300/public/2021-10/RS5790_101887935-hig.jpg?itok=wA74vcv6 1200w" sizes="(min-width: 1290px) 1290px, 100vw" width="325" height="217" src="https://learnenglish.britishcouncil.org/sites/podcasts/files/styles/max_325x325/public/2021-10/RS5790_101887935-hig.jpg?itok=bDtYzTcr" alt="Audio zone" class="img-responsive">
+
+
+</div>
+      </div>
+
+
+</div>
+
+</div>
+
+</div>
+
+      </div>
+</div>
+
+</section>
 <section class="views-element-container view-taxonomy-term block block-views block-views-blocksection-blocks-block-head clearfix" id="block-views-block-section-blocks-block-head">
 
   
