--- a/general-english/index.html
+++ b/general-english/index.html
@@ -211,10 +211,11 @@
 <br>
 <iframe id="content-frame" src="../general-english/general-english.html" style="width: 100%; border: none; overflow: hidden;"></iframe>
 <script>
-    const iframe = document.getElementById('content-frame');
-    iframe.onload = function () {
-        iframe.style.height = iframe.contentWindow.document.body.scrollHeight + 'px';
-    };
+  const iframe = document.getElementById("content-frame");
+  iframe.onload = function () {
+    iframe.style.height =
+      iframe.contentWindow.document.body.scrollHeight + "px";
+  };
 </script>
 
 
